# grupp-ett-github

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_TASK.md  DASHBOARD_TEST.md  Dockerfile  Filippa.readme  JULES_REVIEW_FINDINGS.md  MONITORING_SETUP.md  PRE_PUSH_CHECKLIST.md  PR_FEEDBACK.md  PR_REVIEW.md  PR_REVIEW_FEEDBACK.md  QA_REPORT.md  QUICK_TEST.sh  README.md  REVIEW.md  REVIEW_COMMENTS.md  TEST_JULES.md  TEST_MONITORING.md  TEST_RESULTS.md  app.py  coverage.xml  emma.readme  large.py  pyproject.toml  ralph-monitor-wrapper.sh  reproduce_issues.py  requirements.txt  review_findings.md  scripts_jules_payload.py  setup_azure.sh  tests_agent_test_jules_payload.py
.claude/: AGENTS.override.md  CLAUDE.md  ralph-config.json  ralph-state.json  settings.local.json
.claude/commands/: preflight.md
.claude/hooks/: monitor_client.py  monitor_hook.py  prevent-push.py  security-scan.sh  stop-hook.py
.github/: CODEOWNERS
agent/: JULES_CI_ANALYSIS.md  JULES_REVIEW_FINDINGS.md  PR_REVIEW.md
artifacts/: PR_73_REVIEW.md
cursor_newsletter_app/: flask_app.py  models.py  repository.py  routes.py  service.py
docs/: AGENTIC_DEVOPS_LOOP.md  BLUEPRINT_SEJFA_2026.md  Bygga Agentic Dev Loop-system.md  CURRENT_TASK.md  DEPLOYMENT.md  FINAL_DOCUMENTATION.md  SEJFA_Projektdokumentation.docx  STABILITY_REPORT.md  jules-playbook.md  ralph-prompts.md
memory/: glossary.md
newsflash_app/: __init__.py  flask_app.py
scripts/: ci_check.sh  classify_failure.py  claude-monitor-wrapper.sh  jules_deep_review.sh  jules_payload.py  jules_review.sh  jules_review_api.py  jules_to_jira.py  preflight.sh  run_with_tunnel.sh  verify_cloud_monitor.sh
static/: monitor.html
tests/: __init__.py  conftest.py  test_admin_auth.py  test_admin_statistics.py  test_admin_subscribers.py  test_admin_subscribers_crud.py  test_app.py  test_app_factory.py  test_health_check.py  test_jira_client.py  test_jules_self_healing_trigger.py  test_news_flash.py  test_security.py  test_stop_hook.py  test_tunnel_config.py
(+136 files in other folders)
