[project]
name = "grupp-ett-github"
version = "0.1.0"
description = "Agentic Dev Loop - skolprojekt"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
exclude = [
    ".claude/hooks/*",
    "venv",
    ".venv",
    "__pycache__",
    ".git",
    ".pytest_cache",
    "migrations",
]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src", "sejfa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests for isolated components",
    "integration: Integration tests with external dependencies",
    "e2e: End-to-end workflow tests",
    "slow: Tests that take longer to run",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src", "app.py"]
branch = true
omit = [
    "tests/*",
    ".claude/*",
    "venv/*",
    ".venv/*",
    "src/sejfa/monitor/*",
    "scripts/*",
    "docs/*",
    "static/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
show_missing = true
